# Rock-Market-Lab

./: .gitignore  README.md  a.json  t.txt
api/: .env  Cargo.toml  Dockerfile  Rustenv.Dockerfile  a.md  a.txt  clippy.toml  launch-app.py  readme.md  t.py  t2.json  t3.json
api/browser-crawler/: Cargo.toml  README.md
api/browser-crawler/playwright/: crawl_text.js
api/browser-crawler/src/: lib.rs  playwright.rs
api/common/: Cargo.toml
api/common/examples/: llm_example.rs
api/common/src/: cache.rs  concurrent.rs  constant.rs  dto.rs  http.rs  json.rs  lib.rs  security_name.rs  task_runner.rs
api/common/src/calc/: mod.rs  volatility.rs
api/common/src/config/: mod.rs
api/common/src/data_type/: all_single.rs  date_format.rs  date_range.rs  mod.rs  num_or_string.rs  period.rs  range.rs
api/common/src/db/: conflict_helper.rs  mod.rs
api/common/src/domain/: mod.rs
api/common/src/eventbus/: event_bus.rs  mod.rs
api/common/src/finance/: correlation.rs  mod.rs  stock.rs
api/common/src/fn_tool/: mod.rs
api/common/src/indicators/: README.md  examples.rs  mod.rs  momentum.rs  trend.rs  volatility.rs  volume.rs
api/common/src/llm/: README.md  client.rs  config.rs  error.rs  mod.rs  types.rs
api/common/src/paging/: mod.rs
api/common/src/pickup/: mod.rs
api/common/src/stastics/: correlation.rs  mod.rs
api/common/src/util/: compress_util.rs  csv_util.rs  date_util.rs  html_util.rs  math_util.rs  mod.rs  pdf_util.rs  rate_limit.rs
api/common/src/web/: request.rs
api/doc/: api.md  data-query.sql  data-source.md  entity.md  note.md  portfolio_api.md  promote.md  query.md  script.md  task.md  todo.md  volume_distribution_README.md  volume_distribution_api.md  volume_distribution_example.ps1  volume_distribution_example.sh
api/doc/script/: README.md  change-git-proxy.py  export_db_ddl.py
api/doc/script/db/: export_schema.py
api/doc/tushare-resp/: ths_hot-概念板块.json  ths_hot-热股.json
api/doc/东方财富/: d.json  主营业务.json  概念.json
api/download-ripgrepnilglk/: tmp-file
api/entity/: Cargo.toml  gen-entity.py  readme.md
api/entity/src/: balancesheet.rs  block_trade.rs  cache_data.rs  cashflow.rs  cn_security_info.rs  dc_index.rs  dc_member.rs  etf.rs  exchange.rs  finance_indicator.rs  finance_main_business.rs  fund.rs  fund_daily.rs  fund_portfolio.rs  hm_detail.rs  holding.rs  income.rs  index.rs  index_daily.rs  index_daily_basic.rs  index_monthly.rs  index_weekly.rs  lib.rs  limit_list_d.rs  margin.rs  margin_detail.rs  margin_trading_summary.rs  moneyflow.rs  moneyflow_industry_ths.rs  portfolio.rs  prelude.rs  scheduled_task.rs  stk_holdernumber.rs  stk_holdertrade.rs  stock.rs  stock_daily.rs  stock_daily_basic.rs  stock_holder_number.rs  stock_holder_trade.rs  stock_margin_detail.rs  (+17 more)
api/ext_api/: Cargo.toml
api/ext_api/src/: lib.rs
api/ext_api/src/dongcai/: mod.rs  usf10_data_mainindicator.rs
api/ext_api/src/futu/: mod.rs
api/ext_api/src/mstar/: auth.rs  company.rs  equity.rs  mod.rs
api/ext_api/src/tushare/: balancesheet.rs  block_trade.rs  cashflow.rs  daily.rs  daily_basic.rs  dc_index.rs  dc_member.rs  etf_basic.rs  fina_indicator.rs  fina_mainbz.rs  fund_basic.rs  fund_daily.rs  fund_portfolio.rs  hm_detail.rs  income.rs  index_basic.rs  index_daily.rs  index_daily_basic.rs  index_monthly.rs  index_weekly.rs  limit_list_d.rs  margin.rs  margin_detail.rs  mod.rs  model.rs  moneyflow.rs  moneyflow_ind_ths.rs  monthly.rs  stk_holdernumber.rs  stk_holdertrade.rs  stock_basic.rs  ths_daily.rs  ths_index.rs  ths_member.rs  trade_cal.rs  us_basic.rs  us_daily.rs
api/ext_api/src/xueqiu/: mod.rs  show.rs  user_timeline.rs
api/schedule/: Cargo.toml
api/schedule/src/: lib.rs  lib.rs~  task_manager.rs
api/schedule/src/task/: fetch_balancesheet_task.rs  fetch_basic_org_info_task.rs  fetch_block_trade_task.rs  fetch_cashflow_task.rs  fetch_dc_index_task.rs  fetch_dc_member_task.rs  fetch_eng_translate_task.rs  fetch_etf_task.rs  fetch_fina_mainbz_task.rs  fetch_finance_indicator_task.rs  fetch_fund_daily_task.rs  fetch_fund_portfolio_task.rs  fetch_fund_task.rs  fetch_hm_detail_task.rs  fetch_income_task.rs  fetch_index_daily_task.rs  fetch_index_monthly_task.rs  fetch_index_task.rs  fetch_index_weekly_task.rs  fetch_limit_list_d_task.rs  fetch_margin_detail_task.rs  fetch_margin_task.rs  fetch_margin_trading_summary_task.rs  fetch_moneyflow_task.rs  fetch_stk_holdertrade_task.rs  fetch_stock_daily_basic_task.rs  fetch_stock_daily_task.rs  fetch_stock_holder_number_task.rs  fetch_stock_list_task.rs  fetch_stock_margin_detail_task.rs  fetch_stock_monthly_task.rs  fetch_ths_daily_task.rs  fetch_ths_index.rs  fetch_ths_index_task.rs  fetch_ths_member_task.rs  fetch_trade_calendar_task.rs  fetch_us_basic_task.rs  fetch_us_daily_task.rs  fetch_us_stock_task.rs  mod.rs
api/service/: Cargo.toml
api/service/examples/: low_shadow_example.rs
api/service/src/: dc_service.rs  etf_service.rs  finance_main_business_service.rs  lib.rs  lib.rs~  margin_service.rs  pct_chg.rs  portfolio_service.rs  stock_daily_service.rs  stock_picker_service.rs  stock_picker_single_limit_up_example.md  strategy_profile_service.rs  task_scheduler_service.rs  trade_calendar_service.rs  us_stock_service.rs
api/service/src/analysis/: README.md  examples.rs  limit_up_down.rs  mod.rs  stock_data_provider.rs  stock_picking_service.rs  technical_stock_picker.rs
api/service/src/diagnosis/: diagnosis_result.rs  mod.rs  stock_data_service.rs  stock_diagnosis.rs  stock_diagnosis_service.rs  technical_indicators.rs
api/service/src/fund/: mod.rs
api/service/src/security/: mod.rs  mod.rs~  security_daily_service.rs  security_daily_service.rs~  security_monthly_service.rs  security_monthly_service.rs~  security_search_service.rs  security_search_service.rs~  (+1 more)
api/task_scheduler/: Cargo.toml
api/task_scheduler/src/: executor.rs  lib.rs  scheduler.rs  service.rs  types.rs
api/web_api/: Cargo.toml
api/web_api/src/: error_handlers.rs  main.rs  resource.rs
api/web_endpoint/: Cargo.toml
api/web_endpoint/src/: apis.rs  main.rs  response.rs  result.rs  template.rs
(+256 files in other folders)
