[workspace]
members = [
    "web_endpoint",
    "common",
    "entity",
    "service",
    "schedule",
    "ext_api"]
[workspace.dependencies]
anyhow = "1.0.70"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.167"
chronounit = "0.2.0"

chrono = { version = "0.4.26", features = ["serde"] }
once_cell = "1.19"
tracing = { version = "0.1.37", features = [] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "std"] }
tracing-appender = "0.2.3"

async-trait = "0.1.70"