[package]
name = "browser-crawler"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["process", "fs", "io-util", "macros", "rt-multi-thread", "time", "sync" ] }

playwright = "0.0.20"

tracing = { workspace = true }
