[package]
name = "common"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

bytes = { version = "1.4.0", features = [] }
chrono = "0.4.24"
itertools = "0.10.5"
futures = "0.3.27"
derive_more = "0.99.17"

scraper = "0.19.0"
lopdf = { version = "0.32.0", features = ["pom", "pom_parser"] }


anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }

tracing =  { workspace = true}
tracing-subscriber = { workspace = true}
tracing-appender =  { workspace = true}
once_cell = { workspace = true }
num = "0.4.3"
num-traits = "0.2.19"

strum = "0.26"
strum_macros = "0.26"
flate2 = "1.0.35"
csv = "1.3.1"

config = "0.15.6"
dashmap = "7.0.0-rc1"
pinyin = "0.10.0"

rocket = { version = "0.5.1", features = ["json"]}
thiserror = "1.0"
approx = "0.5"