[package]
name = "ext_api"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
entity = { path = "../entity" }

map-macro = "0.2.6"
derive_more = "0.99.17"
reqwest = { version = "0.11", features = ["blocking", "json"] }

chrono = "0.4.26"
futures = "0.3.30"
async-rate-limit = "0.0.4"
scraper = "0.19.0"


anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }

tracing =  { workspace = true}
tracing-subscriber = { workspace = true}
tracing-appender =  { workspace = true}

once_cell = { workspace = true }
derive-name = "1.1.0"
url = "2.3.1"
bytes = "1.7.1"
governor = "0.8.0"
tokio = "1.36.0"

quick-xml = { version = "0.37.2", features = ["serialize"] }


[dev-dependencies]
tokio = "1.36.0"
