[package]
name = "schedule"
version = "0.1.0"
edition = "2021"

[dependencies]
ext_api = { path = "../ext_api" }
entity = { path = "../entity" }
service = { path = "../service" }

tokio-cron-scheduler = "0.13.0"
chrono = "0.4.38"
tokio = "1.39.2"

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
serde_json =  { workspace = true }