[package]
name = "schedule"
version = "0.1.0"
edition = "2024"

[dependencies]
ext_api = { path = "../ext_api" }
entity = { path = "../entity" }
service = { path = "../service" }
common = { path = "../common" }

tokio-cron-scheduler = "0.13.0"
chrono = "0.4.38"
tokio = "1.39.2"

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
serde_json =  { workspace = true }

# Web scraping dependencies
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.20"
serde = { workspace = true }